--- a/composer.json
+++ b/composer.json
@@ -20,12 +20,13 @@
         }
     ],
     "require": {
-        "league/oauth2-client": "^2.2",
-        "fzaninotto/faker": "^1.6"
+        "league/oauth2-client": "^2.2"
     },
     "require-dev": {
         "phpunit/phpunit": "^6.2",
-        "mockery/mockery": "^0.9.9"
+        "mockery/mockery": "^0.9.9",
+        "squizlabs/php_codesniffer": "^3.0",
+        "fzaninotto/faker": "^1.6"
     },
     "autoload": {
         "psr-4": {
