--- a/.travis.yml
+++ b/.travis.yml
@@ -17,4 +17,4 @@ script:
 
 after_script:
   - wget https://scrutinizer-ci.com/ocular.phar
-  - php ocular.phar code-coverage:upload --format=php-clover coverage.clover
+  - php ocular.phar code-coverage:upload --format=php-clover coverage.clover build/logs/clover.xml
